<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="673dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        >

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="94dp"
            android:ems="10"
            android:hint="@string/edit_username"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp"
            android:gravity="center"
            android:maxLines="10"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pswd_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="?attr/colorPrimary"
            android:text="@string/login_btn_text" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:autoLink="web"
            android:text="@string/web"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>